--- a/README
+++ b/README
@@ -6,6 +6,7 @@ It is a link prediction algorithm based on the Katz Score between two nodes, com
 This program can be used for any kind of directed link prediction problem. 
 
 input 
+The original dataset is bunch of tweets. Each node is a user id of actual user, and the link between them is a directed tweet from person A to person B.
 Due to confidential reason, the training and testing data cannot be given. The ttraining data should be put under data/iter_0 folder, and test data should be under data/test folder.
 Both the train and test data should be in the following format,
 "from_id	to_id"(\t within between)
